vix/tests/checker-corpus/reject/duplicate-pattern-field.vix
enum Artifact {
    Archive { name: String },
}

fn main(a: Artifact) -> String {
    match a {
        Artifact::Archive { name, name } => name,
    }
}
